--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,23 @@
-main.css
+body{
+	background-image: url("../img/bunny.jpg");
+	padding: 3% 0;
+	color: whitesmoke;
+}
+
+header, section{
+	padding: 4% 0;
+	background-color: rgba(187, 212, 208, 0.8);
+}
+
+button{
+	background-color: rgb(150, 208, 212);
+	color: black;
+}
+
+label, span, p{
+	color: black;
+}
+
+span{
+	display: block;
+}
